--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-      <img src="images/wave2.png" alt="" srcset="" class="w-100">
+      <img src="images/Wave2.png" alt="" srcset="" class="w-100">
 
 </section>
 
